fix the topbar logo on mobile layouts

--- a/docs/themes/porter/assets/sass/docs-content.scss
+++ b/docs/themes/porter/assets/sass/docs-content.scss
@@ -85,6 +85,10 @@
   }
 }
 
+.main.docs {
+  padding-top: 4rem;
+}
+
 .main .content-wrap {
   padding-top: 1em;
   padding-bottom: 10em;
